Fixed scroll and added custom scrollbar

--- a/Website/css/dashboard.css
+++ b/Website/css/dashboard.css
@@ -38,7 +38,7 @@
 .dashboard-listing-title{
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 2%;
+    margin-left: 5px;
     padding-right: 80%;
     overflow: hidden;
     text-overflow: clip;
