--- a/Website/css/footer-style.css
+++ b/Website/css/footer-style.css
@@ -7,7 +7,6 @@ footer{
     margin-top: auto;
     height: 100px;
     bottom: 0;
-    position: absolute;
     align-items: center;
 }
 
